--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="sb-header">
       <div class="container">
         <h2><a href="index.html">Demo for Sberbank EDM</a></h2>
-        <a href="https://github.com/devable/sberbank-edm">GitHub</a>
+        <a href="https://github.com/devable/sber-edm">GitHub</a>
       </div>
     </header>
     <div class="container">
