--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div id="sb">
     <header class="sb-header">
       <div class="container">
-        <h2><a href="index.html" target="_blank">Demo for Sberbank EDM</a></h2>
-        <a href="https://github.com/devable/sber-edm">GitHub</a>
+        <h2><a href="index.html">Demo for Sberbank EDM</a></h2>
+        <a href="https://github.com/devable/sber-edm" target="_blank">GitHub</a>
       </div>
     </header>
     <div class="container">
